[GStreamer] imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-removetrack.https.html is crashing https://bugs.webkit.org/show_bug.cgi?id=304837

Reviewed by Xabier Rodriguez-Calvar.

The crash was happening because of attempting to remove a video internal source from the MediaStream
src element feeding an audio player. After fixing that, the test timed out, exposing a WebProcess
deadlock where the GStreamer streamsynchronizer was locked due to EOS and we were attempting to post
a stream collection in a pad probe. Flushing downstream then de-activating our source pad should be
sufficient. Then the new stream collection is posted before removing the unused pad.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:
(WebKitMediaStreamObserver::didRemoveTrack):

Canonical link: https://commits.webkit.org/305276@main